--- a/ex7/package.json
+++ b/ex7/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
